# collector

./: .gitignore  CMakeLists.txt  README.md  build.sh  conanfile.py  conanfile.txt  deps.sh
.github/profiles/: common_fixes
.github/workflows/: ci.yml
include/collector/: article.h  article_repository.h  embeder.h  feed_reader.h
model/: .pin_embedding  required_models.md
sql/: 001_init_schema.sql
src/: CMakeLists.txt  CMkaeLists.txt  article.cpp  article_repository.cpp  embedder.cpp  feed_reader.cpp  fetcher_main.cpp  main.cpp
test/: CMakeLists.txt  feed_reader_test.cpp  setup_test.cpp  test_embedder.cpp
